feat: integration tests

--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsc && node dist/index.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test": "npm run test:full",
+    "test:unit": "jest tests/parserEngine.test.ts tests/fileWalker.test.ts",
+    "test:integration": "jest tests/index.integration.test.ts",
+    "test:full": "npm run test:unit && npm run test:integration",
+    "test:watch": "jest --watch --testPathPattern='tests/(parserEngine|fileWalker).test.ts'",
+    "test:coverage": "jest tests/parserEngine.test.ts tests/fileWalker.test.ts --coverage && jest tests/index.integration.test.ts --coverage"
   },
   "repository": {
     "type": "git",
