--- a/code-parser-node/tsconfig.json
+++ b/code-parser-node/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "ES2020",
+    "moduleResolution": "node",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "strict": true,
     "skipLibCheck": true,
     "outDir": "dist"
   },
-  "include": ["code-parser-node/src", "."]
+  "include": ["src"]
 }
