--- a/package.json
+++ b/package.json
@@ -1,30 +1,24 @@
 {
   "name": "code-parser",
   "version": "1.0.0",
-  "description": "parse codebases",
-  "main": "./dist/index.js",
-  "type": "commonjs",
-  "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "tsc && node dist/index.js",
-    "test": "npm run test:full",
-    "test:unit": "jest tests/parserEngine.test.ts tests/fileWalker.test.ts",
-    "test:integration": "jest tests/index.integration.test.ts",
-    "test:full": "npm run test:unit && npm run test:integration",
-    "test:watch": "jest --watch --testPathPattern='tests/(parserEngine|fileWalker).test.ts'",
-    "test:coverage": "jest tests/parserEngine.test.ts tests/fileWalker.test.ts --coverage && jest tests/index.integration.test.ts --coverage"
+  "description": "A powerful code parsing tool that uses Tree-sitter to parse multiple programming languages and extract their Abstract Syntax Trees (ASTs).",
+  "homepage": "https://github.com/natiassefa/code-parser#readme",
+  "bugs": {
+    "url": "https://github.com/natiassefa/code-parser/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/natiassefa/code-parser.git"
   },
-  "author": "nate assefa",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/natiassefa/code-parser/issues"
+  "author": "nate assefa",
+  "type": "commonjs",
+  "main": "run_pipeline.ts",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/run_pipeline.js",
+    "test": "npm run test"
   },
-  "homepage": "https://github.com/natiassefa/code-parser#readme",
   "dependencies": {
     "ignore": "^7.0.5",
     "tree-sitter": "^0.25.0",
@@ -46,8 +40,5 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
